scenarios/06-extensions/grpc-ext-proc/00-grpc-backend-a-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grpc-backend-a
  labels:
    app.kubernetes.io/part-of: demo
    team: backend
