scenarios/06-extensions/grpc-ext-proc/32-grpcroute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/grpcroute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: grpc-ext-proc-route
  namespace: grpc-backend-a
  labels:
    app.kubernetes.io/part-of: demo
spec:
  parentRefs:
    - name: grpc-ext-proc-gateway
      namespace: gateway-system
      sectionName: grpcs
  hostnames:
    - grpc-ext-proc.example.test
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: cilium.io
            kind: CiliumEnvoyExtProcFilter
            name: grpc-coraza-waf
      backendRefs:
        - name: grpc-api
          port: 9000
